==================== 2.23.4 ====================

==================== 2.23.3 ====================

==================== 2.23.2.1 ====================

==================== 2.23.2 ====================

==================== 2.23.1 ====================

==================== 2.22.1.3 ====================

==================== 2.22.1.2 ====================

==================== 2.22.1.1 ====================

==================== 2.22.1 ====================

==================== 2.22.0 ====================

==================== 2.21.92 ====================

==================== 2.21.91 ====================

==================== 2.21.90 ====================

==================== 2.21.5 ====================

==================== 2.20.1 ====================

==================== 2.20.0.1 ====================

==================== 2.20.0 ====================

==================== 2.19.92 ====================

==================== 2.19.6 ====================

2007-07-26  Jaap Haitsma   <jaap@haitsma.org>

	* GNOME_NotificationAreaApplet.xml:
	Use gtk-about icon i.s.o. deprectated gnome-stock-about
	Fixes bug #457148

==================== 2.19.5 ====================

2007-07-07  Vincent Untz  <vuntz@gnome.org>

	* main.c: (about_cb): use program-name instead of name property for
	GtkAboutDialog.
	Fix bug #438903.

2007-06-26  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: add LIBPANEL_APPLET_CFLAGS to make compilation work. It
	seems some pkgconfig file changed, and we didn't have the bonobo
	headers anymore...

==================== 2.19.4 ====================

==================== 2.19.3 ====================

==================== 2.19.2 ====================

2007-05-09  Vincent Untz  <vuntz@gnome.org>

	* na-tray-manager.c: (na_tray_manager_get_child_title): fix warning

==================== 2.18.1 ====================

==================== 2.18.0 ====================

==================== 2.17.92 ====================

==================== 2.17.91 ====================
