@@ -1,3 +1,12 @@
+2008-06-30  Vincent Untz  <vuntz@gnome.org>
+
+	Fix compiler warnings. Patch by Kjartan Maraas <kmaraas@gnome.org>.
+	Part of bug #521409.
+
+	* main.c:
+	* na-tray-manager.c: (na_tray_manager_handle_begin_message):
+	* na-tray.c:
+
 ==================== 2.23.4 ====================
 
 ==================== 2.23.3 ====================
